# dt

./: .env  .gitignore  CHANGELOG.md  Cargo.toml  README.md  TODO.md  bacon.toml  build.rs
db/: README.md
db/migrations/: 20250502175408_init.sql
db/sample/: votes.db
docs/: CHANGELOG.md  TODO.md
src/: main.rs
templates/: host.html  layout.html  queue.html
templates/partials/: candidate_card.html  candidate_list.html
