[package]
name = "dt"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = { version = "0.12", features = ["with-actix-web"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["full"] }
rusqlite = { version = "0.32", atures = ["bundled"] }
anyhow = "1.0"
uuid = "1.11"
actix-web = "4.9"
askama_actix = "0.14.0"
