[package]
name = "dt"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = { version = "0.12", features = ["with-actix-web"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
actix-web = "4.9"
actix-files = "0.6"
askama_actix = "0.14"
log = "0.4"
env_logger = "0.11"
actix-web-lab = "0.24"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "uuid", "macros", "migrate" ] }
uuid = { version = "1.10", features = ["v4", "serde"] }

[features]
default = ["prod"]
prod = []
dev = []
